tests/miniJava/neg/004462_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( else int [] java ) { return 0 ; } }
